--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,7 +65,12 @@
   }
 }
 
-
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+}
 
 /* body {
   background-color: #ffffff;
